[metadata]
name = 
description = 
author = 
license = MIT
lincense_file = license
platforms = unix, linux, osc, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package =
    chain_links
install_requirements =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
    =__dir__
zip_sage = no